--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "src/utils/nlink/nlink_unpack"]
-	path = src/utils/nlink/nlink_unpack
-	url = https://github.com/NooploopStudio/nlink_unpack.git
+[submodule "src/utils/protocol_extracter"]
+	path = src/utils/protocol_extracter
+	url = https://github.com/nooploop-dev/protocol_extracter.git
+[submodule "src/utils/nlink_unpack"]
+	path = src/utils/nlink_unpack
+	url = https://github.com/nooploop-dev/nlink_unpack.git
