--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ find_package(catkin REQUIRED COMPONENTS
     message_generation
     )
 
+add_subdirectory(extern/serial)
+# find_package(serial CONFIG REQUIRED)
+
 ## Generate messages in the 'msg' folder
 add_message_files(
     FILES
